tests/ui/associated-type-bounds/missing-trait-bound-for-assoc-fails.stderr
error[E0405]: cannot find trait `Temp` in this scope
  --> $DIR/missing-trait-bound-for-assoc-fails.rs:4:14
   |
LL |     M::Item: Temp,
   |              ^^^^ not found in this scope

error[E0220]: associated type `Item` not found for `M`
  --> $DIR/missing-trait-bound-for-assoc-fails.rs:4:8
   |
LL |     M::Item: Temp,
   |        ^^^^ associated type `Item` not found

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0220, E0405.
For more information about an error, try `rustc --explain E0220`.
